dist/LineScript-win64-20260615/tests/cases/compile_fail/parallel_for_break.lsc
main() -> i64 do
  parallel for i in 0..10 do
    break
  end
  return 0
end
